# LSP_LUT-Generator-OFX

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-ofx-release.yml
cmake/: LutGenApple.cmake  LutGenCommon.cmake  LutGenVersion.cmake  LutGenWindows.cmake  version_gen.h.in
openfx-sdk/: README.md
plugin/: LSPLutGeneratorDialogs.h  README.md
plugin/core/: LSPLutGeneratorConstants.h  LSPLutGeneratorCube.cpp  LSPLutGeneratorDescribe.cpp  LSPLutGeneratorLog.h  LSPLutGeneratorPlugin.cpp
plugin/macos/: LSPLutGeneratorDialogs.mm
plugin/windows/: LSPLutGeneratorDialogs.cpp
tools/: README.md
tools/macos/: lutgen_build.sh
tools/windows/: lutgen_build.bat
